Obtener hospitales desde api

--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
         <h1>Pantalla 1: Selecciona una opción</h1>
 
         <label for="options">Selecciona una opción:</label>
-        <select id="options">
-            <option value="1">op 1</option>
-            <option value="2">op 2</option>
-            <option value="3">op 3</option>
+        <select id="hospitales-dropdown">
+            <option value="">Seleccione un hospital</option>
         </select>
 
         <br><br>
@@ -24,5 +22,7 @@
             window.location.href = 'formulario.html'; // Cambia de pantalla al formulario
             }
         </script>
+
+        <script src="hospitales.js"></script>
     </body>
 </html>
